RESOLVED FIXED 273020
[IFC][Invalidation] Decouple inline formatting root and inline-level box invalidation
https://bugs.webkit.org/show_bug.cgi?id=273020
Summary [IFC][Invalidation] Decouple inline formatting root and inline-level box inva...
zalan
Reported 2024-04-19 20:23:50 PDT
ssia
Attachments
Patch (12.56 KB, patch)
2024-04-19 20:46 PDT, zalan
no flags
Patch (12.07 KB, patch)
2024-04-19 20:53 PDT, zalan
no flags
[fast-cq]Patch (12.07 KB, patch)
2024-04-22 06:41 PDT, zalan
ews-feeder: commit-queue-
zalan
Comment 1 2024-04-19 20:46:11 PDT
zalan
Comment 2 2024-04-19 20:53:35 PDT
zalan
Comment 3 2024-04-22 06:41:06 PDT
Created attachment 471039 [details] [fast-cq]Patch
EWS
Comment 4 2024-04-22 07:43:43 PDT
Committed 277815@main (f049381ecbb0): <https://commits.webkit.org/277815@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471039 [details].
Radar WebKit Bug Importer
Comment 5 2024-04-22 07:44:17 PDT
Note You need to log in before you can comment on or make changes to this bug.