[IFC][Invalidation] Decouple inline formatting root and inline-level box invalidation https://bugs.webkit.org/show_bug.cgi?id=273020

Reviewed by Antti Koivisto.

Add support for fine-grain invalidation when style changes depending on whether the current box is the root
of an inline formatting context or participates in inline layout (could be both e.g. inline-block).

e.g. unicode-bidi should be checked on both root and inline-box but going from inflow to out-of-flow should
only invalidate inline item caching when the box participates in inline layout (i.e. not when root's position value changes)

* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::InlineInvalidation::rootStyleWillChange):
(WebCore::Layout::InlineInvalidation::styleWillChange):
* Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.h:
(WebCore::Layout::InlineInvalidation::needsPartialLayoutOnly):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::rootStyleWillChange):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
* Source/WebCore/rendering/RenderButton.cpp:
(WebCore::RenderButton::setInnerRenderer):
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::styleWillChange):
* Source/WebCore/rendering/RenderMenuList.cpp:
(WebCore::if):

Canonical link: https://commits.webkit.org/277815@main